fixed minor layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ h2, h3, h4, h5, h6 {
 }
 
 .wrap {
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
